--- a/admin/views/ofertas.html
+++ b/admin/views/ofertas.html
@@ -1,19 +1,16 @@
-      <?php 
-        require_once('views/navigation.html');
-      ?>
-      <div id="page-users" class="right-side">
+    <div id="page-users" class="right-side">
       <div class="content">
         <div class="row">
           <div class="col-xs-12">
             <section class="panel">
               <header class="panel-heading">
-                <h3>Ofertas</h3>
+                <h1>Ofertas</h1>
                 <div class="pull-right">
                   <ul class="files">
-                    <li><button class="btn btn-dark" title="CVS"><i class="fa fa-file-text-o"></i></button></li>
-                    <li><button class="btn btn-dark" title="Excel"><i class="fa fa-file-excel-o" ></i></button></li>
-                    <li><button class="btn btn-dark" title="PDF"><i class="fa fa-file-pdf-o"></i></button></li>
-                    <li><button class="btn btn-dark" title="Print"><i class="fa fa-print"></i></button></li>
+                    <li><button class="btn btn-red" title="CVS"><i class="fa fa-file-text-o"></i></button></li>
+                    <li><button class="btn btn-red" title="Excel"><i class="fa fa-file-excel-o" ></i></button></li>
+                    <li><button class="btn btn-red" title="PDF"><i class="fa fa-file-pdf-o"></i></button></li>
+                    <li><button class="btn btn-red" title="Print"><i class="fa fa-print"></i></button></li>
                   </ul>
                 </div>
               </header>
@@ -54,9 +51,9 @@
                       <td>{{de}}</td>
                       <td>{{hasta}}</td>
                       <td>
-                        <a href="{{oferta-view}}"><i class="fa fa-eye"></i></a>
-                        <a href="{{oferta-edit}}"><i class="fa fa-pencil"></i></a>
-                        <a href="#"><i class="fa fa-trash-o"></i></a>
+                        <a href="{{oferta-view}}" class="btn btn-show"><i class="fa fa-eye"></i></a>
+                        <a href="{{oferta-edit}}" class="btn btn-edit"><i class="fa fa-pencil"></i></a>
+                        <a href="#" class="btn btn-delete" id="{{id}}" data-toggle="modal" data-target="#delete-item"><i class="fa fa-trash-o"></i></a>
                       </td>
                     </tr>
                     <!--.row-->
@@ -84,10 +81,4 @@
         </div>
       </div>
             <!--<div class="container-fluid" ></div>-->
-      </div>
-
-        <?php 
-          require_once('views/footer.html');
-        ?>
-</body>
-</html>
+    </div>
