--- a/admin/views/oferta-view.html
+++ b/admin/views/oferta-view.html
@@ -4,10 +4,9 @@
           <div class="col-xs-12">
             <section class="panel">
               <header class="panel-heading">
-                <h3>Offerts</h3>
+                <h1>Oferta</h1>
               </header>
               <div class="panel-body">
-
                 <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
                     <div class="profile_img">
                       <div id="crop-avatar">
@@ -54,9 +53,9 @@
                         <tr>
                           <th scope="row">Action </th>
                           <td class=" last">
-                            <a href="{{oferta-view}}" class="btn btn-green btn-xs"><i class="fa fa-eye"></i> Ver </a>
-                            <a href="{{oferta-edit}}" class="btn btn-yellow btn-xs"> <i class="fa fa-pencil"></i> Editar </a>
-                            <a href="#" class="btn btn-red btn-xs"> <i class="fa fa-eraser"></i> Eliminar </a>
+                            <a href="{{oferta-view}}" class="btn btn-show"><i class="fa fa-eye"></i> Ver </a>
+                            <a href="{{oferta-edit}}" class="btn btn-edit"> <i class="fa fa-pencil"></i> Editar </a>
+                            <a href="#" id="{{id}}" data-toggle="modal" data-target="#delete-item" class="btn btn-delete"> <i class="fa fa-eraser"></i> Eliminar </a>
                           </td>
                         </tr>
                       </tbody>
