--- a/admin/views/descuento-view.html
+++ b/admin/views/descuento-view.html
@@ -1,16 +1,12 @@
-    <?php 
-      require_once('views/navigation.html');
-    ?>
     <div id="page-special-prices" class="right-side">
       <div class="content">
         <div class="row">
           <div class="col-xs-12">
             <section class="panel">
               <header class="panel-heading">
-                <h3>Special Price</h3>
+                <h1>Special Price</h1>
               </header>
               <div class="panel-body">
-
                 <div class="col-lg-4 col-md-5 col-sm-6 col-xs-12">
                     <div class="profile_img">
                       <div id="crop-avatar">
@@ -26,38 +22,36 @@
                     <table class="table table-hover">
                       <tbody>
                         <tr>
-                          <th class="col-xs-5 col-sm-3 col-md-3 col-lg-2" scope="row">No.</th>
-                          <td>1</td>
+                          <th scope="row">ID :</th>
+                          <td>{{id}}</td>
                         </tr>
                         <tr>
                           <th scope="row">Code :</th>
-                          <td>PAQ123-9</td>
+                          <td>{{codigo}}</td>
                         </tr>
                         <tr>
                           <th scope="row">Item :</th>
-                          <td>PAN456-C</td>
+                          <td>{{producto}}</td>
                         </tr>
                         <tr>
                           <th scope="row">Discount (%) :</th>
-                          <td>3</td>
+                          <td>{{descuento}}</td>
                         </tr>
                         <tr>
                           <th scope="row">Price :</th>
-                          <td>$55.00</td>
+                          <td>{{precio}}</td>
                         </tr>
                         <tr>
                           <th scope="row">Up to (number articles) :</th>
-                          <td>3</td>
+                          <td>{{cantidad}}</td>
                         </tr>
                         <tr>
                           <th scope="row">From :</th>
-                          <td>2015/12/03</td>
+                          <td>{{desde}}</td>
                         </tr>
                         <tr>
                           <th scope="row">To :</th>
-                          <td>
-                            2015/12/31
-                          </td>
+                          <td>{{hasta}}</td>
                         </tr>
                         <tr>
                           <th scope="row">Action </th>
