--- a/admin/views/descuento-edit.html
+++ b/admin/views/descuento-edit.html
@@ -1,6 +1,3 @@
-    <?php 
-      require_once('views/navigation.html');
-    ?>
     <div id="page-special-prices" class="right-side">
       <div class="content">
         <div class="row">
@@ -16,32 +13,29 @@
                       <div id="crop-avatar">
                         <!-- Current avatar -->
                         <div>
-                          <img id="image-file" src="../img/categories/category.png" alt="category" class="img-thumbnail">
+                          <img id="image-file" src="../img/200x200.png" alt="category" class="img-thumbnail">
                         </div>
                       </div>
                     </div>
-                    <div class="form-group">
-                      <label class="control-label col-md-4 col-sm-4 col-xs-12" for="image">Image
-                      </label>
-                      <div class="col-md-7 col-sm-7 col-xs-12">
-                        <input type="file" id="image" name="image" class="form-control col-md-7 col-xs-12 btn"  accept="image/jpg,image/png" data-image/>
-                      </div>
+                    <div class="col-md-6 col-md-offset-3">
+                      <label class="btn btn-red btn-lg btn-block btn-upload" for="image"><i class="fa fa-cloud-upload"></i> Subir</label>
+                      <input type="file" id="image" name="image" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="image/jpg,image/png" data-image/>
                     </div>
                   </div>
                   <div class="col-lg-8 col-md-7 col-sm-6 col-xs-12"> 
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="code">Code <span class="required">*</span>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="codigo">Código <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input type="text" id="code" name="code" class="form-control col-md-7 col-xs-12" data-required data-code/>
+                        <input type="text" id="codigo" name="codigo" class="form-control col-md-7 col-xs-12" value="{{codigo}}" data-required data-code/>
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="item">Item <span class="required">*</span>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="producto">Producto <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <select id="item" name="item" class="form-control col-md-7 col-xs-12" data-required>
-                          <option value="">Select an option</option>
+                        <select id="producto" name="producto" class="form-control col-md-7 col-xs-12" data-required>
+                          <option value="">Seleccione</option>
                           <option value="1">ITM123-9</option>
                           <option value="2">PAN456-C</option>
                           <option value="3">BRA4854-Z</option>
@@ -49,25 +43,25 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="discount">Discount (%) <span class="required">*</span>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="descuento">Descuento (%) <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input type="number" id="discount" name="discount" min="0" step="1" class="form-control col-md-7 col-xs-12" data-required data-integer/>
+                        <input type="number" id="descuento" name="descuento" min="0" step="1" class="form-control col-md-7 col-xs-12" value="{{descuento}}" data-required data-integer/>
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="number_articles">Up to (number articles) <span class="required">*</span>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="cantidad">Cantidad <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input type="number" id="number_articles" name="number_articles" min="0" step="1" class="form-control col-md-7 col-xs-12" data-required data-integer/>
+                        <input type="number" id="cantidad" name="cantidad" min="0" step="1" class="form-control col-md-7 col-xs-12" value="{{cantidad}}" data-required data-integer/>
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="date_start">From <span class="required">*</span>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="desde">Desde <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <div class='input-group date' id='datetimepickerdate_start'>
-                          <input type="text" id="date_start" name="date_start" class="form-control col-md-7 col-xs-12" data-required data-datetime/>
+                          <input type="text" id="desde" name="desde" class="form-control col-md-7 col-xs-12" data-required data-datetime/>
                           <span class="input-group-addon">
                             <span class="fa fa-calendar">
                             </span>
@@ -76,11 +70,11 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="date_end">To <span class="required">*</span>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="hasta">Hasta <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
                         <div class='input-group date' id='datetimepickerdate_end'>
-                          <input type="text" id="date_end" name="date_end" class="form-control col-md-7 col-xs-12" data-required data-datetime/>
+                          <input type="text" id="hasta" name="hasta" class="form-control col-md-7 col-xs-12" data-required data-datetime/>
                           <span class="input-group-addon">
                             <span class="fa fa-calendar">
                             </span>
@@ -89,18 +83,17 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="price">Price <span class="required">*</span>
-                      </label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="precio">Precio</label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input type="number" min="0" step="0.5" id="price" name="price" class="form-control col-md-7 col-xs-12" data-required data-money>
+                        <input type="number" min="0" step="0.5" id="precio" name="precio" class="form-control col-md-7 col-xs-12" disabled>
                       </div>
                     </div>
 
                     <div class="form-group">
-                        <div class="col-md-6 col-xs-12 col-md-offset-3">
-                          <button type="submit" class="btn btn-green">Submit</button>
-                          <button type="submit" class="btn btn-red">Cancel</button>
-                        </div>
+                      <div class="col-md-6 col-xs-12 col-md-offset-3">
+                        <button type="submit" class="btn btn-show"><i class="fa fa-check"></i> Guardar</button>
+                        <button type="button" class="btn btn-red"><i class="fa fa-ban"></i> Cancel</button>
+                      </div>
                     </div>
                   </div>
                 </form>
