--- a/admin/views/descuento-edit.html
+++ b/admin/views/descuento-edit.html
@@ -4,7 +4,7 @@
           <div class="col-xs-12">
             <section class="panel">
               <header class="panel-heading">
-                <h3>Special Price</h3>
+                <h1>Descuento</h1>
               </header>
               <div class="panel-body">
                 <form id="" class="form-horizontal form-label-left" onsubmit="return validate()" data-validate>
