--- a/admin/views/footer.html
+++ b/admin/views/footer.html
@@ -1,12 +1,9 @@
-<script   src="https://code.jquery.com/jquery-2.2.2.min.js"   integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="   crossorigin="anonymous"></script>
-    
-
   <script src="../js/bootstrap.js"></script>
   <script src="../js/chart.min.js"></script>
   <script src="../js/bootstrap-progressbar.min.js"></script>
-  <script src="../js/jquery.nicescroll.min.js"></script><!--
-  <script src="../js/bootstrap-datetimepicker.js"></script>-->
+  <script src="../js/jquery.nicescroll.min.js"></script>
   <script src="../js/validator.js"></script>
+  <script src="../js/jquery-ui.js"></script>
   <script src="../js/scripts-admin.js"></script>
   </body>
 </html>
