--- a/admin/views/navigation.html
+++ b/admin/views/navigation.html
@@ -15,8 +15,8 @@
   <link rel="stylesheet" href="../css/bootstrap.min.css"/>
   <link rel="stylesheet" href="../css/bootstrap-theme.min.css"/>
   <link rel="stylesheet" href="../css/animate.css">
-  <link rel="stylesheet" href="../css/bootstrap-datetimepicker.css"/>
   <link rel="stylesheet" href="../css/settings.css"/>
+  <script   src="https://code.jquery.com/jquery-2.2.2.min.js"   integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="   crossorigin="anonymous"></script>
   
   
   <!--[if lt IE 9]>
@@ -90,6 +90,11 @@
                 <li>
                   <a href="index.php?ctrl=productos">
                     <i class="fa fa-black-tie"></i> Productos 
+                  </a>
+                </li>
+                <li>
+                  <a href="index.php?ctrl=catalogos">
+                    <i class="fa fa-book"></i> Catálogos 
                   </a>
                 </li>
                 <li>
