--- a/admin/views/usuario-edit.html
+++ b/admin/views/usuario-edit.html
@@ -78,7 +78,7 @@
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="fecha_nacimiento">Fecha de nacimiento <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input class="form-control" type="date" id="fecha_nacimiento" name="fecha_nacimiento" placeholder="dd/mm/aaaa" data-required value={{fecha_nacimiento}}/>
+                        <input class="form-control" type="text" id="fecha_nacimiento" name="fecha_nacimiento" placeholder="dd/mm/aaaa" data-required/>
                       </div>
                     </div>
                     <div class="form-group">
