--- a/css/settings.css
+++ b/css/settings.css
@@ -1,5 +1,9 @@
 @import url(http://fonts.googleapis.com/css?family=Roboto:400,500,700);
 @import url(http://fonts.googleapis.com/css?family=Quicksand:300,400,700);
+@import url('jquery-ui.css');
+@import url('jquery-ui.structure.css');
+@import url('jquery-ui.theme.css');
+
 @import url('buttons.css');
 @import url('forms.css');
 @import url('pager.css');
