agregar archivo jquery, datepicker y tema de jquery

--- a/admin/views/oferta-edit.html
+++ b/admin/views/oferta-edit.html
@@ -48,23 +48,14 @@
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="desde">Desde <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input class="form-control" type="date" id="desde" name="desde" placeholder="dd/mm/aaaa" data-required value={{desde}}/>
+                        <input class="form-control" type="text" id="desde" name="desde" placeholder="dd/mm/aaaa" data-required value={{desde}}/>
                       </div>
                     </div>
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="hasta">Hasta <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input class="form-control" type="date" id="hasta" name="hasta" placeholder="dd/mm/aaaa" data-required value={{hasta}}/>
+                        <input class="form-control" type="text" id="hasta" name="hasta" placeholder="dd/mm/aaaa" data-required value={{hasta}}/>
                       </div>
-                      <!-- <div class="col-md-6 col-sm-12 col-xs-12">
-                        <div class='input-group date' id='datetimepickerdate_end'>
-                          <input type="text" id="hasta" name="hasta" class="form-control col-md-7 col-xs-12" data-required  data-datetime/>
-                          <span class="input-group-addon">
-                            <span class="fa fa-calendar">
-                            </span>
-                          </span>
-                        </div>
-                      </div> -->
                     </div>
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="precio">Precio <span class="required">*</span>
@@ -87,5 +78,4 @@
           </div>
         </div>
       </div>
-      <!--<div class="container-fluid" ></div>-->
     </div>
