--- a/admin/views/descuento-edit.html
+++ b/admin/views/descuento-edit.html
@@ -57,29 +57,15 @@
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="desde">Desde <span class="required">*</span>
-                      </label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="desde">Desde <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <div class='input-group date' id='datetimepickerdate_start'>
-                          <input type="text" id="desde" name="desde" class="form-control col-md-7 col-xs-12" data-required data-datetime/>
-                          <span class="input-group-addon">
-                            <span class="fa fa-calendar">
-                            </span>
-                          </span>
-                        </div>
+                        <input class="form-control" type="text" id="desde" name="desde" placeholder="dd/mm/aaaa" data-required value="{{desde}}"/>
                       </div>
                     </div>
                     <div class="form-group">
-                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="hasta">Hasta <span class="required">*</span>
-                      </label>
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="hasta">Hasta <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <div class='input-group date' id='datetimepickerdate_end'>
-                          <input type="text" id="hasta" name="hasta" class="form-control col-md-7 col-xs-12" data-required data-datetime/>
-                          <span class="input-group-addon">
-                            <span class="fa fa-calendar">
-                            </span>
-                          </span>
-                        </div>
+                        <input class="form-control" type="text" id="hasta" name="hasta" placeholder="dd/mm/aaaa" data-required value="{{hasta}}"/>
                       </div>
                     </div>
                     <div class="form-group">
@@ -102,14 +88,4 @@
           </div>
         </div>
       </div>
-      <!--<div class="container-fluid" ></div>-->
     </div>
-    <?php 
-      require_once('views/footer.html');
-    ?>
-  <script src="../js/moment-with-locales.js"></script>
-  <script src="../js/bootstrap-datetimepicker.js"></script>
-  <script src="../js/scripts.js"></script>
-</body>
-</html>
-
