--- a/admin/views/navigation.html
+++ b/admin/views/navigation.html
@@ -16,7 +16,8 @@
   <link rel="stylesheet" href="../css/bootstrap-theme.min.css"/>
   <link rel="stylesheet" href="../css/animate.css">
   <link rel="stylesheet" href="../css/settings.css"/>
-  <script   src="https://code.jquery.com/jquery-2.2.2.min.js"   integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="   crossorigin="anonymous"></script>
+  <script type="text/javascript" src="../js/jquery-2.2.2.js"></script>
+  <!--<script   src="https://code.jquery.com/jquery-2.2.2.min.js"   integrity="sha256-36cp2Co+/62rEAAYHLmRCPIych47CvdM+uTBJwSzWjI="   crossorigin="anonymous"></script>-->
   
   
   <!--[if lt IE 9]>
