--- a/admin/views/oferta-edit.html
+++ b/admin/views/oferta-edit.html
@@ -48,13 +48,13 @@
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="desde">Desde <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input class="form-control" type="text" id="desde" name="desde" placeholder="dd/mm/aaaa" data-required value={{desde}}/>
+                        <input class="form-control" type="text" id="desde" name="desde" placeholder="dd/mm/aaaa" data-required value="{{desde}}"/>
                       </div>
                     </div>
                     <div class="form-group">
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="hasta">Hasta <span class="required">*</span></label>
                       <div class="col-md-6 col-sm-12 col-xs-12">
-                        <input class="form-control" type="text" id="hasta" name="hasta" placeholder="dd/mm/aaaa" data-required value={{hasta}}/>
+                        <input class="form-control" type="text" id="hasta" name="hasta" placeholder="dd/mm/aaaa" data-required value="{{hasta}}"/>
                       </div>
                     </div>
                     <div class="form-group">
