--- a/admin/views/modal-delete-catalogo.html
+++ b/admin/views/modal-delete-catalogo.html
@@ -3,11 +3,11 @@
         <div class="modal-content alert alert-error">
           <div class="modal-header ">
             <button type="button" class="close" data-dismiss="modal">&times;</button>
-            <h4 class="modal-title">Eliminar categoría</h4>
+            <h4 class="modal-title">Eliminar catalogo</h4>
           </div>
           <div class="modal-body">
             <h2 class="text-center"><i class="fa fa fa-trash fa-3x"></i></h2>
-            <h3 class="text-center">La categoría será eliminada definitivamente.</h3>
+            <h3 class="text-center">El catalogo será eliminado definitivamente.</h3>
 
           </div>
           <div class="modal-footer">
