vistas colores con validaciones

--- a/admin/views/navigation.html
+++ b/admin/views/navigation.html
@@ -118,6 +118,11 @@
                     <i class="fa fa-dollar"></i> Descuentos
                   </a>
                 </li>
+                <li>
+                  <a href="index.php?ctrl=colores">
+                    <i class="fa fa-paint-brush"></i> Colores
+                  </a>
+                </li>
               </ul>
             </section>
           </aside>
