--- a/admin/views/color-edit.html
+++ b/admin/views/color-edit.html
@@ -4,7 +4,7 @@
           <div class="col-xs-12">
             <section class="panel">
               <header class="panel-heading">
-                <h1>Colo</h1>
+                <h1>Color</h1>
               </header>
               <div class="panel-body">
                 <form method="post" class="form-horizontal form-label-left" action="{{action}}" onsubmit="return validate()" enctype="multipart/form-data" data-validate>
