--- a/admin/views/usuarios.html
+++ b/admin/views/usuarios.html
@@ -22,7 +22,7 @@
                         <th>Nombre</th>
                         <th>Apellido</th>
                         <th>Correo</th>
-                        <th>Género</th>
+                        <th>Rol</th>
                         <th>Fecha nacimiento</th>
                         <th>Teléfono</th>
                         <th class=" no-link last"><span class="nobr">Acción</span></th>
@@ -34,7 +34,7 @@
                         <th>Nombre</th>
                         <th>Apellido</th>
                         <th>Correo</th>
-                        <th>Género</th>
+                        <th>Rol</th>
                         <th>Fecha nacimiento</th>
                         <th>Teléfono</th>
                         <th class=" no-link last"><span class="nobr">Acción</span></th>
@@ -48,7 +48,7 @@
                         <td>{{nombre}}</td>
                         <td>{{apellido}}</td>
                         <td>{{correo}}</td>
-                        <td>{{genero}}</td>
+                        <td>{{rol}}</td>
                         <td>{{fecha_nacimiento}}</td>
                         <td>{{telefono}}</td>
                         <td>
