--- a/css/buttons.css
+++ b/css/buttons.css
@@ -342,17 +342,17 @@ fieldset[disabled] .btn-edit.active {
 
 /*
 //AMARILLO
-#f8d347
-#FABE28
+#FFE9AF
 
 
 ROJO
-#ff6c60
-#FF003C
+#FEA6A2
 
 VERDE
-#a9d86e
-#88C100
+#8DCCAD
+
+CAFE
+#988864
 
 AZUL
 #57c8f2*/
