--- a/views/modal_address.html
+++ b/views/modal_address.html
@@ -58,8 +58,8 @@
               <input type="text" class="form-control" id="exterior" name="exterior"/>
             </div>
             <div class="col-sm-6">
-              <label for="exterior" class="control-label">Interior </label>
-              <input type="text" class="form-control" id="exterior" name="exterior"/>
+              <label for="interior" class="control-label">Interior </label>
+              <input type="text" class="form-control" id="interior" name="interior"/>
             </div>
           </div>
 
