--- a/views/shoppingcart.html
+++ b/views/shoppingcart.html
@@ -4,10 +4,10 @@
 			<fieldset> 
         <legend>Mi carrito</legend>
 				<div class="row header-table">
-          <div class="col-sm-2 hidden-xs">
+          <div class="col-sm-3 hidden-xs">
             <h4>Producto</h4>
           </div>
-          <div class="col-sm-3 hidden-xs">
+          <div class="col-sm-2 hidden-xs">
             <h4>Cantidad</h4>
           </div>
           <div class="col-sm-2 hidden-xs">
@@ -17,11 +17,12 @@
             <h4>Sub-total</h4>
           </div>
           <div class="col-sm-2 hidden-xs">
-            
           </div>   
         </div>
+
+
         <div class="row">
-          <div class="col-sm-2">
+          <div class="col-sm-3">
           <article>
             <figure>
               <figcaption>
@@ -32,9 +33,9 @@
           </article>
           
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-2">
             <span class="price">2553</span>
-            <input type="number" min="0" step="1"/>
+            <input type="number" class="form-control"min="0" step="1"/>
           </div>
           <div class="col-sm-2">
             <span>$14.50</span>
@@ -49,10 +50,9 @@
 
 
 
-        <div class="row header-table">   
-        </div>
+        <div class="row header-table"></div>
         <div class="row">
-          <div class="col-sm-2">
+          <div class="col-sm-3">
           <article>
             <figure>
               <figcaption>
@@ -63,70 +63,9 @@
           </article>
           
           </div>
-          <div class="col-sm-3">
+          <div class="col-sm-2">
             <span class="price">2553</span>
-            <input type="number" min="0" step="1"/>
-          </div>
-          <div class="col-sm-2">
-            <span>$14.50</span>
-          </div>
-          <div class="col-sm-3">
-            <span>123456789</span>
-          </div>   
-          <div class="col-sm-2">
-            <button class="btn btn-red"><i class="fa fa-trash"></i></button>
-          </div>   
-        </div>
-
-
-
-        <div class="row header-table">   
-        </div>
-        <div class="row">
-          <div class="col-sm-2">
-          <article>
-            <figure>
-              <figcaption>
-                <h4 class="name">Sandalia</h4>
-              </figcaption>
-              <img src="admin/images/dama/zapatillas/bb2b44fbca032d670d9aac27164142b0_1.jpg" alt="article 1"/>
-            </figure>
-          </article>
-          
-          </div>
-          <div class="col-sm-3">
-            <span class="price">2553</span>
-            <input type="number" min="0" step="1"/>
-          </div>
-          <div class="col-sm-2">
-            <span>$14.50</span>
-          </div>
-          <div class="col-sm-3">
-            <span>123456789</span>
-          </div>   
-          <div class="col-sm-2">
-            <button class="btn btn-red"><i class="fa fa-trash"></i></button>
-          </div>   
-        </div>
-
-
-        <div class="row header-table">   
-        </div>
-        <div class="row">
-          <div class="col-sm-2">
-          <article>
-            <figure>
-              <figcaption>
-                <h4 class="name">Sandalia</h4>
-              </figcaption>
-              <img src="admin/images/dama/zapatillas/bb2b44fbca032d670d9aac27164142b0_1.jpg" alt="article 1"/>
-            </figure>
-          </article>
-          
-          </div>
-          <div class="col-sm-3">
-            <span class="price">2553</span>
-            <input type="number" min="0" step="1"/>
+            <input type="number" class="form-control"min="0" step="1"/>
           </div>
           <div class="col-sm-2">
             <span>$14.50</span>
