--- a/admin/views/usuario-edit.html
+++ b/admin/views/usuario-edit.html
@@ -59,6 +59,17 @@
                       </div>
                     </div>
                     <div class="form-group">
+                      <label class="control-label col-md-3 col-sm-12 col-xs-12" for="rol">Rol <span class="required">*</span></label>
+                      <div class="col-md-6 col-sm-12 col-xs-12">
+                        <select id="rol" name="rol" class="form-control col-md-7 col-xs-12" data-required >
+                          <option value="">Seleccione</option>
+                          <option value="usuario">Usuario</option>
+                          <option value="gerente">Gerente</option>
+                          <option value="admin">Administrador</option>
+                        </select>
+                      </div>
+                    </div>
+                    <div class="form-group">
                       <label class="control-label col-md-3 col-sm-12 col-xs-12" for="genero">Género <span class="required">*</span>
                       </label>
                       <div class="col-md-6 col-sm-6 col-xs-12">
