--- a/views/footer.html
+++ b/views/footer.html
@@ -12,8 +12,9 @@
           <nav class="col-sm-3">
             <h4>Políticas</h4>
             <ul>
-              <li><a href="#">Términos y Condiciones</a></li>
-              <li><a href="#">Aviso de Privacidad</a></li>
+              <li><a href="index.php?ctrl=privacidad&action=terminos_y_condiciones">Términos y Condiciones</a></li>
+              <li><a href="index.php?ctrl=privacidad&action=aviso_privacidad">Aviso de Privacidad</a></li>
+              <li><a href="index.php?ctrl=privacidad&action=cambios_y_devoluciones">Cambios y Devoluciones</a></li>
             </ul>
           </nav>
           <nav class="col-sm-3">
@@ -22,7 +23,6 @@
               <li><a href="#">Mi cuenta</a></li>
               <li><a href="index.php?ctrl=shopping-cart&action=list">Mis pedidos</a></li>
               <li><a href="index.php?ctrl=shopping-cart&action=list">Mi carrito</a></li>
-              <li><a href="#">Cambios y Devoluciones</a></li>
             </ul>
           </nav>
           <nav class="col-sm-3">
