--- a/admin/views/descuentos.html
+++ b/admin/views/descuentos.html
@@ -15,7 +15,7 @@
                 </div>
               </header>
               <div class="panel-body">
-                <table class="table table-bordered table-hover table-condensed">
+                <table id="bootstrap-table" class="table table-bordered table-hover table-condensed">
                   <thead>
                     <tr>
                       <th>#</th>
@@ -64,22 +64,6 @@
                   </tbody>
                   <!--.table.tbody-->
                 </table>
-              </div>
-              <div class="panel-body">
-                <div class="pagination pull-right">
-                  <ul>
-                    <li><a href="#"><<</a></li>
-                    <li><a href="#"><</a></li>
-                    <li class="active">
-                      <a href="#">1</a>
-                    </li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">></a></li>
-                    <li><a href="#">>></a></li>
-                  </ul>
-                </div>
               </div>
             </section>
           </div>
