--- a/admin/views/footer.html
+++ b/admin/views/footer.html
@@ -5,5 +5,12 @@
   <script src="../js/validator.js"></script>
   <script src="../js/jquery-ui.js"></script>
   <script src="../js/scripts-admin.js"></script>
+  <script src="../js/vendor/jquery.sortelements.js" type="text/javascript"></script>
+  <script src="../js/vendor/jquery.bdt.js" type="text/javascript"></script>
+  <script>
+    $(document).ready( function () {
+      $('#bootstrap-table').bdt();
+    });
+  </script>
   </body>
 </html>
