--- a/views/productos.html
+++ b/views/productos.html
@@ -108,7 +108,7 @@
         <div class="overlay">
           <ul>
             <li>
-              <a class="btn btn-lg btn-red" href="admin/catalogos/Sandalias.pdf" target="_blank"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a>
+              <a class="btn btn-lg btn-red" href="index.php?ctrl=productos&action=show&id=1" target="_blank"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a>
             </li>
             <li>
               <a class="btn btn-lg btn-red" href="index.php?ctrl=shopping-cart&action=list" target="_blank"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
@@ -128,7 +128,7 @@
         <div class="overlay">
           <ul>
             <li>
-              <a class="btn btn-lg btn-red" href="admin/catalogos/Sandalias.pdf" target="_blank"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a>
+              <a class="btn btn-lg btn-red" href="index.php?ctrl=productos&action=show&id=1" target="_blank"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a>
             </li>
             <li>
               <a class="btn btn-lg btn-red" href="index.php?ctrl=shopping-cart&action=list" target="_blank"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
@@ -148,7 +148,7 @@
         <div class="overlay">
           <ul>
             <li>
-              <a class="btn btn-lg btn-red" href="admin/catalogos/Sandalias.pdf" target="_blank"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a>
+              <a class="btn btn-lg btn-red" href="index.php?ctrl=productos&action=show&id=1" target="_blank"><span class="glyphicon glyphicon-zoom-in" aria-hidden="true"></span></a>
             </li>
             <li>
               <a class="btn btn-lg btn-red" href="index.php?ctrl=shopping-cart&action=list" target="_blank"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span></a>
