--- a/admin/views/productos.html
+++ b/admin/views/productos.html
@@ -71,7 +71,7 @@
                         <td>{{precio}}</td>
                         <td>
                           <a href="index.php?ctrl=productos&action=view&id={{id}}" class="btn btn-show"><i class="fa fa-eye"></i></a>
-                          <a href="index.php?ctrl=productos&action=view&id={{id}}" class="btn btn-edit"><i class="fa fa-pencil"></i></a>
+                          <a href="index.php?ctrl=productos&action=edit&id={{id}}" class="btn btn-edit"><i class="fa fa-pencil"></i></a>
                           <a href="#" class="btn btn-delete" id="{{id}}" data-toggle="modal" data-target="#delete-item"><i class="fa fa-trash-o"></i></a>
                         </td>
                       </tr>
