--- a/views/modal_phone.html
+++ b/views/modal_phone.html
@@ -8,15 +8,19 @@
         <h4 class="modal-title">Modal Header</h4>
       </div>
       <div class="modal-body">
-        <form role="form" method="post" onsubmit="return validate()" data-validate>
+        <form method="post" onsubmit="return validatePhone()" data-validate-phone>
           <div class="row form-group">
             <div class="col-sm-3">
               <label for="lada" class="control-label">Lada </label>
-              <input type="text" class="form-control" id="lada" name="lada" placeholder="2 dígitos" data-required/>
+              <div>
+                <input type="tel" class="form-control" id="lada" name="lada" placeholder="2 dígitos" data-required data-phone/>
+              </div>
             </div>
             <div class="col-sm-9">
               <label for="telefono" class="control-label">Teléfono </label>
-              <input type="text" class="form-control" id="telefono" name="telefono" placeholder="10 dígitos" data-required/>
+              <div>
+                <input type="tel" class="form-control" id="telefono" name="telefono" placeholder="10 dígitos" data-required data-phone/>
+              </div>
             </div>
           </div>
           <div class="form-group">
