--- a/views/producto.html
+++ b/views/producto.html
@@ -4,6 +4,7 @@
       <figure class="color-selected">
         <img src="admin/images/dama/zapatillas/d766ab38778043d50626aba76f46d78d.jpg" alt="article 1"/>
       </figure>
+      <h3 class="text-red">Colores</h3>
       <ul class="colors">
         <li>
           <a href="#">
@@ -57,8 +58,8 @@
           <li><a href="#">28.5</a></li>
         </ul>
       </nav>
-      <p class="price">$419.00</p>
-      <button href="#" class="btn btn-red btn-lg btn-block"><i class="fa fa-shopping-cart"></i> <span class="hidden-xs hidden-sm">Comprar</span></button>
+      <p class="price pull-right">$419.00</p>
+      <button href="#" class="btn btn-red btn-lg btn-block"><i class="fa fa-check"></i> Comprar</button>
     </div>
   </section>
 </div>
