--- a/admin/views/usuario-edit.html
+++ b/admin/views/usuario-edit.html
@@ -19,7 +19,17 @@
                     <div class="col-md-6 col-md-offset-3">
                       <label class="btn btn-red btn-lg btn-block btn-upload" for="image"><i class="fa fa-cloud-upload"></i> Subir</label>
                       <input type="file" id="image" name="image" class="form-control col-md-7 col-sm-12 col-xs-12 btn" accept="image/jpg,image/png" data-thumbnail/>
-                      <button type="button" class="btn btn-dark btn-lg btn-block btn-upload" data-toggle="modal" data-target="#modal-address">Open Modal</button>
+                      <div class="row">
+                        <div class="col-xs-12 margin-top-15">
+                          <div class="form-group">
+                            <button class="btn btn-dark btn-lg btn-block" type="button" data-toggle="modal" data-target="#modal-address"><i class="fa fa-plus"></i> <span class="hidden-xs hidden-sm">Agregar </span>domicilio </button>
+                          </div>
+
+                          <div class="form-group">
+                            <button class="btn btn-dark btn-lg btn-block" type="button" data-toggle="modal" data-target="#modal-phone"><i class="fa fa-plus"></i> <span class="hidden-xs hidden-sm">Agregar </span>teléfono </button>
+                          </div>
+                        </div>
+                      </div>
                     </div>
                   </div>
 
